# TrabalhoEngenhariaDados

./: 404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: deploy.yml
data/delta/fato_evento/: .part-00000-1add8c1f-7be2-452a-9b3b-a73f4328c2bb-c000.snappy.parquet.crc  .part-00000-509b69dc-b152-40fa-b9ec-52ec613416b7-c000.snappy.parquet.crc  .part-00000-637d79cc-76d4-4170-9fcd-aed7775e3800-c000.snappy.parquet.crc  .part-00000-da5b38a2-12cb-466b-907d-f5af7f964eb1-c000.snappy.parquet.crc  .part-00003-56015096-6e0b-4107-a630-4647f1851495-c000.snappy.parquet.crc  .part-00003-9f9e0500-20fa-464b-a796-b5c6139809b1-c000.snappy.parquet.crc  .part-00007-671f8cc9-0763-480e-91f0-30b951a06afc-c000.snappy.parquet.crc  .part-00007-fe78a917-3a7a-49f2-b258-216d3c7dbb87-c000.snappy.parquet.crc  .part-00011-78f98d51-98da-4fc7-92a0-03036106455b-c000.snappy.parquet.crc  .part-00011-b5499219-0a58-448b-be14-da810a5661df-c000.snappy.parquet.crc  part-00000-329c5804-082c-4acc-96de-2e5b73f38622-c000.snappy.parquet  part-00000-637d79cc-76d4-4170-9fcd-aed7775e3800-c000.snappy.parquet  part-00000-da5b38a2-12cb-466b-907d-f5af7f964eb1-c000.snappy.parquet  part-00000-f2a3efdf-9f3f-4462-98c0-4b715e7c1879-c000.snappy.parquet  part-00003-56015096-6e0b-4107-a630-4647f1851495-c000.snappy.parquet  (+5 more)
data/iceberg/fato_evento/metadata/: .v1.metadata.json.crc  (+35 more)
delta/: index.html
docs/: delta.md  iceberg.md  index.md  pyspark.md
iceberg/: index.html
pyspark/: index.html
search/: search_index.json
src/: delta_lake_football.ipynb  iceberg_football.ipynb
(+46 files in other folders)
