[project]
name = "trabalho-spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "delta-spark==3.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
    "mkdocs>=1.6.1",
    "pyspark==3.5.1",
    "pytest>=9.0.3",
    "taskipy>=1.14.1",
]
